fix: align addContactBtn

--- a/src/pages/ContactList/style.scss
+++ b/src/pages/ContactList/style.scss
@@ -4,6 +4,8 @@
   }
 
   &>.add-btn {
+    display: block;
     font-size: 18px;
+    margin: 0 auto;
   }
 }
